--- a/.gitignore
+++ b/.gitignore
@@ -213,3 +213,4 @@ $RECYCLE.BIN/
 # .pnp.*
 
 # End of https://www.toptal.com/developers/gitignore/api/vscode,node,yarn,dotenv,windows,macos,linux
+yarn.lock
