--- a/package.json
+++ b/package.json
@@ -3,7 +3,27 @@
   "version": "1.0.0",
   "description": "Creación de Componentes HTML en react",
   "main": "index.js",
+  "scripts": {
+    "dev": "webpack serve"
+  },
   "repository": "https://github.com/elboqueronpaco/elboqueronpacoComponete.git",
   "author": "elboqueronpaco <elboqueronpaco@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@babel/core": "^7.12.13",
+    "@babel/preset-env": "^7.12.13",
+    "@babel/preset-react": "^7.12.13",
+    "babel-loader": "^8.2.2",
+    "webpack": "^5.20.1",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "styled-components": "^5.2.1"
+  }
 }
